pfish       2005/10/06 07:58:54 UTC	(20051006-2691)
  Log:
  add DEL as an alias for DELETE
  

  Changes:	Modified:
  +4 -1		trunk/modules/memoserv/delete.c (File Modified) 


kog         2005/10/06 07:52:28 UTC	(20051006-2689)
  Log:
  moved memo_newcount out of mymemo_ and added memoct_new to myuser_
  

  Changes:	Modified:
  +1 -1		trunk/include/account.h (File Modified) 


kog         2005/10/06 07:46:22 UTC	(20051006-2687)
  Log:
  moved struct smalloc until after checks to avoid extra free() calls, changed NULL check to (!memonum) to prevent compiler complaints about pointers 
  

  Changes:	Modified:
  +1 -1		trunk/modules/memoserv/delete.c (File Modified) 
  +4 -10	trunk/modules/memoserv/forward.c (File Modified) 
  +1 -1		trunk/modules/memoserv/read.c (File Modified) 
  +3 -8		trunk/modules/memoserv/send.c (File Modified) 


kog         2005/10/06 07:31:53 UTC	(20051006-2685)
  Log:
  makes sure arg is a valid int via atoi == NULL check 
  
  

  Changes:	Modified:
  +6 -0		trunk/modules/memoserv/delete.c (File Modified) 
  +7 -0		trunk/modules/memoserv/forward.c (File Modified) 
  +8 -1		trunk/modules/memoserv/read.c (File Modified) 


pfish       2005/10/06 07:27:18 UTC	(20051006-2683)
  Log:
  add help for nickserv set nomemo (new feature)
  
  

  Changes:	Modified:
  + -		trunk/help/nickserv/set_nomemo (File Added) 
  +1 -0		trunk/modules/nickserv/help.c (File Modified) 
  +2 -0		trunk/modules/nickserv/set.c (File Modified) 


pfish       2005/10/06 06:40:24 UTC	(20051006-2681)
  Log:
  change notice() output to match everything else.
  

  Changes:	Modified:
  +2 -2		trunk/modules/memoserv/forward.c (File Modified) 
  +1 -1		trunk/modules/memoserv/send.c (File Modified) 


nenolod     2005/10/06 04:27:44 UTC	(20051006-2679)
  Log:
  I hate glibc.

  Changes:	Modified:
  +4 -4		trunk/include/libatheme.h (File Modified) 


nenolod     2005/10/06 04:22:32 UTC	(20051006-2677)
  Log:
  Fixes. :/
  

  Changes:	Modified: