@@ -1,3 +1,12 @@
+kog         2005/10/06 08:08:12 UTC	(20051006-2693)
+  Log:
+  fixed delete all issue
+  
+
+  Changes:	Modified:
+  +2 -1		trunk/modules/memoserv/delete.c (File Modified) 
+
+
 pfish       2005/10/06 07:58:54 UTC	(20051006-2691)
   Log:
   add DEL as an alias for DELETE
